--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Handlee|Kaushan+Script&display=swap');
+
 body{
     
     background: url(./images/cover-wood.jpeg);
@@ -5,9 +7,30 @@ body{
     position: relative;
     
 }
+.h1{
+    font-weight: 900;
+    font-size: 50px;
+    font-family: 'Handlee';
+    font-style: italic;
+    position: absolute;
+    top: -15%;
+    letter-spacing: 11px;
+}
+.card{
+    transition: all 0.5s;
+    transform-style: preserve-3d;
+}
+.back .front{
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
 .keys{
     display: flex;
     flex: 1;
+    margin-top:10%;
     flex-wrap: wrap;
     min-height: 100vh;
     align-items: center;
@@ -21,14 +44,17 @@ body{
     border-radius: .5rem;
     margin: 0.1rem;
     font-size: 0.5rem;
+    font-weight: bold;
     padding: 0.1rem .1rem;
     transition: all 0.07s ease;
-    width: 7rem;
+    width: 10rem;
     background-color: #ffc600;
     text-align: center;
     color: whitesmoke;
     background: rgba(0,0,0,0,0);
   text-shadow: 0 0 .5rem black;
+  overflow-wrap: break-word;
+  cursor:pointer;
 }
 kbd{
     display: block;
@@ -42,7 +68,7 @@ kbd{
 }
 
 .sound{
-    text-transform: uppercase;
+    text-transform: capitalize;
     letter-spacing: .1rem;
     color: whitesmoke;
     display: block;
